--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install pep8 --use-mirrors
-  - pip install pyflakes --use-mirrors
+  - pip install flake8 --use-mirrors
 script:
-  - pep8 .
-  - pyflakes .
+  - flake8 .
